chore(dependencies): update React, Next.js, and other packages for security and stability
- Updated `@types/react` from 19.2.6 to 19.2.7 for improved TypeScript definitions.
- Upgraded React from 19.2.0 to 19.2.1 and Next.js from 16.0.5 to 16.0.7 to address critical security vulnerabilities (CVE-2025-55182 and CVE-2025-66478).
- Updated 27 other dependencies to their latest versions while maintaining project stability.
- Documented changes in CHANGELOG.md and added details about the security vulnerabilities in known-issues.md.

These updates enhance security and ensure compatibility across the project.

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@emotion/is-prop-valid": "^1.4.0",
     "@eslint/js": "9.39.1",
     "@hookform/resolvers": "^5.2.2",
-    "@next/bundle-analyzer": "16.0.5",
+    "@next/bundle-analyzer": "16.0.7",
     "@prisma/client": "6.18.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -128,18 +128,18 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.86.0",
-    "@sveltejs/kit": "2.49.0",
+    "@sveltejs/kit": "2.49.1",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "7.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vercel/analytics": "^1.5.0",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
-    "@vercel/speed-insights": "latest",
-    "@vitest/browser": "4.0.14",
-    "@vitest/ui": "4.0.14",
+    "@vercel/speed-insights": "^1.3.1",
+    "@vitest/browser": "4.0.15",
+    "@vitest/ui": "4.0.15",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -150,7 +150,7 @@
     "eslint-config-prettier": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "globals": "16.5.0",
     "gsap": "^3.13.0",
     "happy-dom": "20.0.11",
@@ -158,16 +158,16 @@
     "jsonwebtoken": "^9.0.2",
     "lenis": "1.3.15",
     "lucide-react": "^0.555.0",
-    "motion": "^12.23.24",
-    "next": "16.0.5",
+    "motion": "^12.23.25",
+    "next": "16.0.7",
     "next-auth": "4.24.13",
     "next-themes": "latest",
     "nodemailer": "7.0.11",
     "pino": "10.1.0",
-    "react": "19.2.0",
+    "react": "19.2.1",
     "react-day-picker": "^9.11.3",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.67.0",
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.5.1",
@@ -175,7 +175,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "^2.0.7",
     "stripe": "^20.0.0",
-    "svelte": "^5.45.2",
+    "svelte": "^5.45.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.181.2",
@@ -190,12 +190,12 @@
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@next/eslint-plugin-next": "^16.0.5",
-    "@storybook/addon-a11y": "^10.1.2",
-    "@storybook/addon-docs": "^10.1.2",
-    "@storybook/addon-onboarding": "^10.1.2",
-    "@storybook/addon-vitest": "^10.1.2",
-    "@storybook/nextjs-vite": "^10.1.2",
+    "@next/eslint-plugin-next": "^16.0.7",
+    "@storybook/addon-a11y": "^10.1.4",
+    "@storybook/addon-docs": "^10.1.4",
+    "@storybook/addon-onboarding": "^10.1.4",
+    "@storybook/addon-vitest": "^10.1.4",
+    "@storybook/nextjs-vite": "^10.1.4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -203,45 +203,45 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.181.0",
-    "@typescript-eslint/eslint-plugin": "8.48.0",
-    "@typescript-eslint/parser": "8.48.0",
+    "@typescript-eslint/eslint-plugin": "8.48.1",
+    "@typescript-eslint/parser": "8.48.1",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/browser": "^4.0.12",
-    "@vitest/browser-playwright": "^4.0.14",
-    "@vitest/coverage-v8": "4.0.14",
-    "@vitest/ui": "^4.0.12",
+    "@vitest/browser": "^4.0.15",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "4.0.15",
+    "@vitest/ui": "^4.0.15",
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "latest",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "16.0.7",
     "eslint-plugin-react-hooks": "7.0.1",
-    "eslint-plugin-storybook": "^10.1.2",
+    "eslint-plugin-storybook": "^10.1.4",
     "husky": "^9.1.7",
     "jsdom": "^27.2.0",
     "languagetool-cli": "^1.0.13",
-    "markdown-to-jsx": "^9.2.0",
-    "markdownlint": "^0.39.0",
+    "markdown-to-jsx": "^9.3.0",
+    "markdownlint": "^0.40.0",
     "markdownlint-cli": "^0.46.0",
-    "next-openapi-gen": "^0.8.8",
+    "next-openapi-gen": "^0.8.9",
     "nodemon": "^3.1.11",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.3",
-    "prettier-plugin-tailwindcss": "^0.7.1",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "6.18.0",
     "prisma-zod-generator": "^1.32.1",
-    "storybook": "^10.1.2",
+    "storybook": "^10.1.4",
     "style-dictionary": "^5.1.1",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-config-tailwindcss": "^1.0.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "3.4.17",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vitest": "^4.0.14"
+    "typescript-eslint": "^8.48.1",
+    "vitest": "^4.0.15"
   },
   "packageManager": "pnpm@10.20.0",
   "engines": {
@@ -250,13 +250,13 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.2.6",
+      "@types/react": "19.2.7",
       "@auth/core": "0.41.1",
       "tailwindcss": "3.4.17",
       "glob": "^11.0.3",
       "rimraf": "^6.0.1",
       "node-domexception": "npm:@types/node@*",
-      "baseline-browser-mapping": "latest"
+      "baseline-browser-mapping": "^2.9.0"
     },
     "onlyBuiltDependencies": [
       "@prisma/client",
